<resources>
    <string name="app_name">Tarea4v2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_configurar">Configurar</string>
    <string name="menu_entrenar">Entrenar</string>
    <string name="menu_estadisticas">Estadisticas</string>
    <string name="menu_enviar">Enviar Estadisticas</string>
    <string name="menu_formulario_usuario">Añadir Usuario</string>

    <string name="titulo_inicio">Bien venido a Maestro de la Multiplicación v2. Selecciona un usuario.</string>

    <string name="titulo_login">Escribe tus datos para iniciar el Juego</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>