<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_configurar">

    <fragment
        android:id="@+id/nav_configurar"
        android:name="com.example.tarea4v2.ui.entrenar.EntrenarFragment"
        android:label="@string/menu_configurar"
        tools:layout="@layout/fragment_comfigurar" />

    <fragment
        android:id="@+id/nav_entrenar"
        android:name="com.example.tarea4v2.ui.configurar.ConfigurarFragment"
        android:label="@string/menu_entrenar"
        tools:layout="@layout/fragment_entrenar" />

    <fragment
        android:id="@+id/nav_estadisticas"
        android:name="com.example.tarea4v2.ui.estadisticas.EstadisticasFragment"
        android:label="@string/menu_estadisticas"
        tools:layout="@layout/fragment_estadisticas" />
</navigation>