<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/cavezarafondo"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="87dp"
        android:layout_height="91dp"

        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@drawable/profesora" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="23dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/black"/>
</LinearLayout>